Added project directories and cmake files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,9 @@
 project("Vulkan Application / Playground")
-cmake_minimum_required(3.12)
+cmake_minimum_required(VERSION 3.12)
 add_subdirectory(include)
 add_subdirectory(src)
+add_subdirectory(cmake)
+add_subdirectory(tests)
+add_subdirectory(doc)
+
 
