Updated main app .cpp

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,8 @@
-set( SOURCE VulkanApplication.cpp )
+set( SOURCE VulkanApp.cpp )
 link_directories($CMAKE_CURRENT_SOURCE_DIR/include)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-add_executable(VulkanApp SOURCE)
+set(CMAKE_CXX_FLAGS "-std=c++17")
+set(CMAKE_CXX_LINK_FLAGS "-lglfw" "-lvulkan" "-ldl" "-lpthread" "-lX11" "-lXxf86vm" "-lXrandr" "-lXi")
+add_executable(VulkanApp ${SOURCE})
+target_compile_options(VulkanApp PUBLIC ${CMAKE_CXX_FLAGS})
+target_link_options(VulkanApp PUBLIC ${CMAKE_CXX_LINK_FLAGS})
