--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,8 @@ project("Vulkan Application / Playground")
 cmake_minimum_required(VERSION 3.12)
 add_subdirectory(include)
 add_subdirectory(src)
-add_subdirectory(cmake)
-add_subdirectory(tests)
-add_subdirectory(doc)
+# add_subdirectory(cmake)
+# add_subdirectory(tests)
+# add_subdirectory(doc)
 
 
