--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,16 @@
-set( SOURCE VulkanApp.cpp )
-link_directories($CMAKE_CURRENT_SOURCE_DIR/include)
+find_package(X11 REQUIRED)
+find_package(glfw3 REQUIRED)
+find_package(Vulkan REQUIRED)
+
+set(SOURCE "${CMAKE_SOURCE_DIR}/src/VulkanApp.cpp" )
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-set(CMAKE_CXX_FLAGS "-std=c++17")
-set(CMAKE_CXX_LINK_FLAGS "-lglfw" "-lvulkan" "-ldl" "-lpthread" "-lX11" "-lXxf86vm" "-lXrandr" "-lXi")
+set(CMAKE_CXX_STANDARD_REQUIRED 17)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -lglfw -lvulkan -ldl -lpthread -lX11 -lXxf86vm -lXrandr -lXi")
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 add_executable(VulkanApp ${SOURCE})
-target_compile_options(VulkanApp PUBLIC ${CMAKE_CXX_FLAGS})
-target_link_options(VulkanApp PUBLIC ${CMAKE_CXX_LINK_FLAGS})
+#target_compile_options(VulkanApp PUBLIC ${CMAKE_CXX_FLAGS})
+# target_link_options(VulkanApp PUBLIC ${CMAKE_CXX_LINK_FLAGS})
+add_custom_target(vulkan-app COMMAND VulkanApp)
+
+#add_custom_target(clean COMMAND ${CMAKE_COMMAND} -E remove VulkanApp)
