Tutorial_Triangle.h had included its .cpp counterpart at the bottom of the file as a cheap trick to link the two files together. Therefore, 'target_include_directories' should allow us to remove this cheap trick and keep things in an orderly manner. Additionally, this change removed the ability of generating a binary with source level debug information, which meant gdb nor VSCode could load any break points. Adding the '-g' flag to the executable fixes this.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,15 +3,25 @@ find_package(glfw3 REQUIRED)
 find_package(Vulkan REQUIRED)
 find_package(glm REQUIRED)
 
-set(SOURCE "${CMAKE_SOURCE_DIR}/src/VulkanApp.cpp" )
+
+set(INCLUDES  
+${CMAKE_SOURCE_DIR}/include/Tutorial_Triangle.h
+)
+
+set(SOURCE 
+${CMAKE_SOURCE_DIR}/src/VulkanApp.cpp 
+${CMAKE_SOURCE_DIR}/src/Tutorial_Triangle.cpp
+)
+
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_CXX_STANDARD_REQUIRED 17)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O2")
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -lglfw -lvulkan -ldl -lpthread -lX11 -lXxf86vm -lXrandr -lXi")
 
-include_directories("${CMAKE_CURRENT_SOURCE_DIR}/include/*.h")
+include_directories("${CMAKE_SOURCE_DIR}/include")
 
 add_executable(VulkanApp ${SOURCE})
+#target_include_directories(VulkanApp PUBLIC ${CMAKE_SOURCE_DIR}/include)
 
 target_link_libraries(VulkanApp glfw)
 target_link_libraries(VulkanApp glm::glm )
